--- a/whambamleo-home-creative/src/Skills.css
+++ b/whambamleo-home-creative/src/Skills.css
@@ -29,6 +29,7 @@
     display: flex;
     height: 100%;
     flex-direction: row;
+    flex-wrap: wrap;
 
 }
 
@@ -36,6 +37,7 @@
     display: flex;
     height: 100%;
     flex-direction: row;
+    flex-wrap: wrap;
 
 }
 
@@ -43,6 +45,7 @@
     display: flex;
     height: 100%;
     flex-direction: row;
+    flex-wrap: wrap;
 
 }
 
@@ -75,8 +78,7 @@
 .skills-fluent {
     width: 420px;
     display: flex;
-    flex-wrap: wrap;
-    
+    flex-wrap: wrap;   
 }
 
 .skills-familiar {
